tests/typecheck/no_skolem_info/T20063.stderr
T20063.hs:25:21: error: [GHC-25897]
    • Could not deduce ‘ctx6 ~ (ctx0 :*& l0)’
      from the context: (ctx4 ~ Extend ctx1, ctx5 ~ Extend ctx2)
        bound by a pattern with constructor:
                   U :: forall {k} (ctx1 :: Context) (ctx2 :: Context) (l :: k).
                        Rn ctx1 ctx2 -> Rn (ctx1 :*& l) (ctx2 :*& l),
                 in an equation for ‘rnRename’
        at T20063.hs:25:11-13
      Expected: Idx ctx6
        Actual: Idx (ctx0 :*& l0)
      ‘ctx6’ is a rigid type variable bound by
        the type signature for:
          rnRename :: forall (ctx4 :: Context) (ctx5 :: Context)
                             (ctx3 :: Context) (ctx6 :: Context).
                      Rn ctx4 ctx5 -> Idx ctx3 -> Idx ctx6
        at T20063.hs:24:1-48
    • In the expression: T _
      In an equation for ‘rnRename’: rnRename (U _) _ = T _
    • Relevant bindings include
        rnRename :: Rn ctx4 ctx5 -> Idx ctx3 -> Idx ctx6
          (bound at T20063.hs:25:1)

T20063.hs:26:17: error: [GHC-27346]
    • The data constructor ‘T’ should have 1 argument, but has been given none
    • In the pattern: T
      In an equation for ‘rnRename’: rnRename _ T = undefined

